fixed canvas not showing under the video

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ ul{
 #cameraContainer {
   width: 100%;
   height: 100%;
-  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
